--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eaten-words",
+  "name": "fill-words",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,13 +17,13 @@
     "react-markdown": "^8.0.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^2.1.3",
     "react-share": "^4.4.0",
     "react-timer-hook": "^3.0.5",
     "redux": "^4.1.2",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "http://simamumu.github.io/eaten-words",
+  "homepage": "http://smmmmmmm.github.io/fill-words",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
