--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: npm ci, build and test
+        env:
+          CI: false
         run: |
           npm ci
           npm run build --if-present
