--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: deploy
 on:
   push:
     branches:
-      - fix_workflow
+      - master
 
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
